# dummy-football-card-game

./: CMakeLists.txt  README.md
domain/: Player.cpp  Player.h
